@@ -1,7 +1,9 @@
 1.3.1:
 -----
-    * Minor changes in the workflow, while sync came to early
-    * Fixed bug not showing media library button if not using other hooked-in plugins (thanks to ICE)
+    * Better workflow between nuggets and entry textareas
+    * Fixed bug not showing media library button, if not using other hooked-in plugins (thanks to ICE)
+    * Fixed bug not proceeding image button path correctly, with non_rewrite_mode sites (thanks to ICE)
+    * Enhanced old (multiple) zip file removement
 
 1.3.0:
 -----
